Many, many changes Summary: - fixed (hopefully) elements jumping around when family tree is traversed - added iframe prevention measures - removed spurious console logs - made search filters a grid for better display on thinner screens - added a loading icon when data is being downloaded for the first time - added keyboard shortcut for accessing main search bar - made it so that search bar is focused on opening page - added an icon in family tree view for students that were student guides (i.e. had bacchas) - fixed results not being sorted in order of roll number - added credits section

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -2,6 +2,7 @@ body {
 	background-color:#000;
 	overflow-y: scroll;
 	overflow-x: hidden;
+	/* font-family:Helvetica, sans-serif; */
 }
 
 img {
@@ -39,7 +40,7 @@ a {
 	width: 80%;
 	max-width: 900px;
 	margin: auto;
-	padding:10px;
+	padding:30px 0px;
 	display:flex;
 	flex-direction:column;
 	align-items: center;
@@ -61,6 +62,7 @@ a {
 
 .options .field {
 	width: 200px;
+	margin: auto;
 }
 
 .options .main-text {
@@ -195,24 +197,32 @@ a {
 
 .overlay {
 	width:80vw;
-	margin:auto;
-	display:flex;
+	margin:0 auto;
+	/* filter: drop-shadow(0px 5px 5px #777); */
+	/* 
+display:flex;
 	justify-content:center;
-	filter: drop-shadow(0px 5px 5px #777);
-	
+*/
+	display:grid;
+	grid-template-columns: 1fr;
+	align-content: start;
 }
 
 .overlay > * {
 	margin:auto;
-
+	margin-top:5vh;
+	grid-row-start: 1;
+ 	grid-column-start: 1;
 }
 
 #count {
-	display:flex;
-	justify-content:space-evenly;
+	width:200px;
+	margin:auto;
 }
 
 #count * {
+	margin:10px auto;
+	width:fit-content;
 	padding: 10px;
 }
 
@@ -229,13 +239,19 @@ a {
 }
 
 .overlay > .fade-enter {
-	position: absolute;
-	align-self:center;
+	/* position: absolute; */
+	align-self:start;
+	margin:auto;
+	margin-top:5vh
+	/* justify-self:start; */
 }
  
 .overlay > .fade-exit {
-	position: absolute;
-	align-self:center;
+	/* position: absolute; */
+	align-self:start;
+	margin:auto;
+	margin-top:5vh
+	/* justify-self:start; */
 }
 
 
@@ -253,11 +269,11 @@ a {
 
 
 .loader {
-	width: 100px;
-	height: 100px;
-	border-radius: 100px;
-	border: dashed 10px #008888;
-	animation: loading 5s infinite linear; 
+	width: 100px !important; 
+	height: 100px !important;
+	border-radius: 100px !important;
+	border: dashed 10px #008888 !important;
+	animation: loading 5s infinite linear !important;
 }
 
 @keyframes loading {
